# BuyNow-Backend

./: .gitignore  README.md  adminPage.py  main.py  migration.py  pyproject.toml  requirements.txt  testing.py
app/api/: api_router.py
app/auth_dependency/: __init__.py  auth_user.py
app/config/: payment_gateway.py  settings.py
app/constants/: __init__.py  constant_fields.py
app/core/: __init__.py  security.py
app/database/: collections.py  connection.py
app/dependencies/: address_dependency.py  admin_dependency.py  cart_dependency.py  common_dependency.py  email_dependency.py  order_dependency.py  payment_dependency.py  product_dependency.py  seller_dependency.py  user_dependency.py
app/migrations/: migrate.py  product_field.py
app/routes/: Email.py  __init__.py  address.py  admin.py  common.py  payment.py  products.py  seller.py  user.py
app/schemas/: __init__.py  address_schema.py  cart_schema.py  login_schema.py  order_schema.py  product_schema.py  user_schema.py
app/utils/: __init__.py  cloudinary_file_upload.py  current_timestamp.py  email_service.py  random_code_gen.py  set_cookies.py
tests/: testing_otp_verification.py
