[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==5.0.0",
    "beanie[srv]==2.0.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudinary==1.44.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "h11==0.16.0",
    "idna==3.11",
    "lazy-model==0.4.0",
    "motor==3.7.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.10.1",
    "pymongo==4.16.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "razorpay>=2.0.0",
    "requests==2.32.5",
    "six==1.17.0",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
]
